# Meraki-MCP

./: .dockerignore  .env.example  .gitignore  100_PERCENT_COVERAGE_SUMMARY.md  AI_STARTUP_GUIDE.md  API_CATEGORY_COMPARISON.md  BETA_RELEASE_NOTES.md  BRANCHES.md  CENTRALIZED_ARCHITECTURE.md  CLAUDE.md  CLIENT_TROUBLESHOOTING_GUIDE.md  COMPARISON.md  COMPLETE_FEATURES_GUIDE_2025.md  COMPLETE_TOOLS_SUMMARY.md  DAILY_OPERATIONS_GUIDE.md  DETAILED_NEW_FEATURES_2025.md  DHCP_TOOLS_GUIDE.md  DIRECTORY_CONTENTS.md  Dockerfile  Dockerfile.sse  Dockerfile.streamable  EVENT_LOG_ANALYSIS_GUIDE.md  FEATURES.md  FEATURES_DETAILED.md  FINAL_API_COVERAGE_ANALYSIS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_TEST_REPORT.md  FINAL_TEST_RESULTS.md  FINAL_TEST_SUMMARY_ALL_ROUNDS.md  FIREWALL_GUIDE.md  HTTP_SSE_SETUP.md  IMPLEMENTATION_NOTES.md  LICENSE  MCP_CLIENT_SAFETY.md  MCP_TEST_PROMPTS.md  MCP_TEST_ROUND_2.md  MCP_TEST_ROUND_3.md  MCP_TEST_ROUND_4.md  MCP_VALIDATION_TESTS.md  MERGING_GUIDE.md  (+208 more)
python/: .env.example  CURRENT_STATUS.md  Dockerfile  N8N_MCP_SETUP.md  N8N_USAGE.md  NETWORK_DEPLOYMENT.md  PORTING_SUMMARY.md  README.md  SETUP_GUIDE.md  SSE_MCP_STATUS.md  create_clean_tools.py  docker-compose.hybrid.yml  docker-compose.network.yml  docker-compose.yml  extract_tools.py  fix_tools.py  hybrid_tools.py  pyproject.toml  quickstart.sh  requirements.txt  simple_server.py  start_hybrid.sh  test_now.sh  test_server.sh  test_tools.py
python/examples/: n8n_integration.json
python/src/: dhcp_tools_impl.py  hybrid_server.py  mcp_sse_bridge.py  meraki_tools.py  meraki_tools_simple.py
(+416 files in other folders)
